# FluidLearn

./: .gitignore  AGENTS.md  README.md  init.py  pyproject.toml  requirements.txt
FluidLearn/: __init__.py  main.ipynb  visualize.py
data/00_cases/: .gitignore  00_cases.rar  README.md
data/00_cases/bump/: README.md  bump.geo  constants.json  preProcessing.py  sim.sh  simOnce.sh
data/00_cases/channelflow/: channelflow.geo  constants.json  sim.sh
data/00_cases/cylinder/: README.md  constants.json  cylinder.geo  plot.sh  references.txt  requirements.txt  sim.sh
data/00_cases/lidcavity/: constants.json  lidcavity.geo  sim.sh  simOnce.sh
data/00_cases/meshes/: cylinder_old1.geo  cylinder_old2.geo  structured_channelBwrdStep2D_8000.geo  taylorgreenvortex.geo
data/00_cases/taylorgreenvortex/: generate.ipynb  mesh.h5
data/00_cases/vortexmerger/: constants.json  postProcessing.py  sim.sh  vortexmerger.geo
data/01_raw/: .gitignore
data/01_raw/test_TGV/: 0.h5  1.h5  constants.h5  constants.json  (+1 more)
fluidlearn/: __init__.py  cli.py  visualization.py  visualize.py
fluidlearn/cfdml/: models.py  models_base.py  models_utils.py  plot_utils.py
fluidlearn/data/: __init__.py  dataloader.py
fluidlearn/utils/: __init__.py  colormap.py  gradient.py  misc.py  topology.py
fluidlearn/vis/: GUIunstructured.py  InterfaceMeshData.py  Raw_visualization.py  UIpanel.py  UIpanels.py  __init__.py  cell_highlighter.py  interface_grid_data.py  interface_mesh_data.py  mesh_highlighter.py
notebooks/: sampling_interp.ipynb  train.ipynb
src/: __init__.py  cli.py  visualize.py
(+28 files in other folders)
