[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidlearn"
version = "0.1.0"
description = "Advanced deep learning framework for CFD data processing, training, and visualization"
authors = [{name = "sp-droid"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["fluidlearn"]

